infrastructure/kube/keep-prd/keep-dapp-token-dashboard-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keep-dapp-token-dashboard
  namespace: default
  labels:
    app: keep-dapp
    type: token-dashboard
spec:
  replicas: 6
  selector:
    matchLabels:
      app: keep-dapp
      type: token-dashboard
  template:
    metadata:
      labels:
        app: keep-dapp
        type: token-dashboard
    spec:
      containers:
      - name: keep-dapp-token-dashboard
        image: keepnetwork/token-dashboard:v1.15.1
        ports:
          - containerPort: 80
