infrastructure/kube/keep-prd/keep-dapp-token-dashboard-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keep-dapp-token-dashboard
  labels:
    app: keep-dapp
    type: token-dashboard
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: keep-dapp
    type: token-dashboard
