infrastructure/kube/keep-prd/keep-dapp-token-dashboard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keep-dapp-token-dashboard
  namespace: default
  labels:
    app: keep-dapp
    type: token-dashboard
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: token-dashboard-ingress
spec:
  tls:
  - secretName: keep-network-cloudflare-origin-cert
  backend:
    serviceName: keep-dapp-token-dashboard
    servicePort: 80
